# onyx

./: [A[B[B[A[A[A[B[B  [A[B[B[A[A[A[B[B.pub  .code-review-graph  .craft-pr-test.md  .env.development  .env_infra_aws  .envrc  .gitignore  .gitmodules  .impeccable.md  .kanban.toml  .mcp.json  .oxfmtrc.json  .pre-commit-config.yaml  .prettierignore  .ruff.toml  .secretsignore  0001-Add-Token-Counter-feature.patch  AGENTS.md  AGENTS.md.template  BEDROCK_MODELS.md  BUILD_CONNECTOR_AUDIT.md  Brewfile  CLAUDE.md  CLAUDE.md.template  CONTRIBUTING.md  CUSTOMIZATIONS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICKREF.md  DEPLOYMENT_STATUS.md  Dockerfile  EE_SPEC_FOR_ONYX.md  FORK_CHANGES.md  IMPLEMENTATION_PLAN.md  Jenkinsfile  LICENSE  LICENSE.mit  LOCAL_DEV_GUIDE.md  Makefile  PR_EVIDENCE.md  (+151 more)
.claude/: claude-security-guidance.md  commands.json  settings.json  settings.local.json
.cursor/: mcp.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-dev-user.sh  init-firewall.sh
.github/: actionlint.yml  pull_request_template.md  runs-on.yml
.greptile/: config.json  files.json  rules.md
.trunk/: trunk.yaml
backend/: .coverage  .gitignore  AGENTS.md  Dockerfile  Dockerfile.model_server  Dockerfile.sandbox-templates  README.md  (+15 more)
cli/: Dockerfile  README.md  go.mod  go.sum  hatch_build.py  main.go  pyproject.toml
cli/cmd/: agents.go  ask.go  chat.go  commands_test.go  common.go  common_test.go  configure.go  image.go  image_test.go  root.go  search.go  search_test.go  serve.go  validate.go
cli/internal/: _version.py
cli/internal/api/: client.go  client_test.go  image_test.go  stream.go  stream_test.go
cli/internal/config/: config.go  config_test.go  experiments.go
cli/internal/embedded/: SKILL.md
cli/internal/exitcodes/: codes.go  codes_test.go
cli/internal/models/: events.go  models.go
cli/internal/onboarding/: onboarding.go
cli/internal/overflow/: writer_test.go
cli/internal/parser/: parser.go  parser_test.go
cli/internal/testutil/: testutil.go
cli/internal/tui/: app.go  commands.go  configure.go  help.go  input.go  messages.go  sshauth.go  statusbar.go  styles.go  viewport.go  viewport_test.go
cli/internal/util/: browser.go
cli/internal/version/: version.go  version_test.go
cli/src/onyx_cli/: __init__.py  api_client.py  app.py  config.py  main.py  models.py  onboarding.py  stream_parser.py
cli/src/onyx_cli/widgets/: chat_display.py  input_area.py  splash.py  status_bar.py
cli/tests/integration/: test_api_client.py
cli/tests/unit/: test_config.py  test_stream_parser.py  test_widgets.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: alt_menu.rs  commands.rs  config.rs  debug_log.rs  main.rs  menu.rs  window.rs
desktop/src-tauri/src/scripts/: chat_link_intercept.js  console_capture.js
tools/gonyx/: .gitignore  README.md  go.mod  hatch_build.py  main.go  pyproject.toml
tools/gonyx/cmd/: cherry-pick.go  root.go
(+9124 files in other folders)
