[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onyx-cli"
version = "0.1.0"
description = "Terminal UI for chatting with Onyx - your AI-powered enterprise search platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Onyx" }]
keywords = ["onyx", "cli", "tui", "chat", "ai", "enterprise-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "textual>=2.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
onyx-cli = "onyx_cli.main:main"

[project.urls]
Homepage = "https://github.com/onyx-dot-app/onyx"
Documentation = "https://docs.onyx.app"
Repository = "https://github.com/onyx-dot-app/onyx/tree/main/cli"

[tool.hatch.build.targets.wheel]
packages = ["src/onyx_cli"]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
