[build-system]
requires = ["hatchling", "hatch-vcs", "go-bin~=1.24", "manygo"]
build-backend = "hatchling.build"

[project]
name = "onyx-devtools"
description = "Developer utilities for working on onyx.app"
license = {file = "../../LICENSE"}
authors = [{ name = "Onyx AI", email = "founders@onyx.app" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = [
  "onyx", "cli", "devtools", "tools", "tooling",
]
classifiers = [
    "Programming Language :: Go",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]


[project.urls]
Repository = "https://github.com/onyx-dot-app/onyx"

[tool.hatch.build]
include = ["go.mod", "go.sum", "main.go"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "gonyx/v(?P<version>\\d+\\.\\d+\\.\\d+)"

[tool.hatch.build.hooks.custom]
binary_name = "gonyx"
